--- a/css/main.css
+++ b/css/main.css
@@ -186,7 +186,7 @@
 		transform: translate3d(0,0,0);
 	/* Set your background with this */
 
-		background: #348cb2 url("images/background.jpg") bottom left;
+		background: #348cb2 url("images/bg.jpg") bottom left;
 		background-repeat: repeat-x;
 		height: 100%;
 		left: 0;
@@ -851,7 +851,6 @@
 		}
 
 		#bg {
-			background-size: 750px auto;
 			width: 2250px;
 		} }
 
@@ -937,7 +936,6 @@
 		}
 
 		#bg {
-			background-size: 300px auto;
 			width: 900px;
 		}
 
@@ -1035,7 +1033,6 @@
 		}
 
 		#bg {
-			background-size: 412.5px auto;
 			width: 1237.5px;
 		}
 
